--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -8,15 +8,19 @@
     <style>
         body{
             height: 98vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
             background-position: center top;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url(imagens/wallpaper002.jpg) center no-repeat fixed;
             background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border-radius: 15px;
