--- a/Desafios/desafio014/index.html
+++ b/Desafios/desafio014/index.html
@@ -51,49 +51,49 @@
     <tbody>
         <tr>
             <th rowspan="4" scope="rowgroup">Exatas</th>
-            <th>Matemática</th>
-            <th>0,0</th>
-            <th>0,0</th>
-            <th>0,0</th>
+            <td>Matemática</td>
+            <td>0,0</td>
+            <td>0,0</td>
+            <td>0,0</td>
         </tr>
         <tr>
-            <th>Física</th>
-            <th>0,0</th>
-            <th>0,0</th>
-            <th>0,0</th>
+            <td>Física</td>
+            <td>0,0</td>
+            <td>0,0</td>
+            <td>0,0</td>
         </tr>
         <tr>
-            <th>Química</th>
-            <th>0,0</th>
-            <th>0,0</th>
-            <th>0,0</th>
+            <td>Química</td>
+            <td>0,0</td>
+            <td>0,0</td>
+            <td>0,0</td>
         </tr>
         <tr>
-            <th>Biologia</th>
-            <th>0,0</th>
-            <th>0,0</th>
-            <th>0,0</th>
+            <td>Biologia</td>
+            <td>0,0</td>
+            <td>0,0</td>
+            <td>0,0</td>
         </tr>
 
 
         <tr class="diferente">
             <th colspan="4">Média de Exatas</th>
-            <th>0,0</th>
+            <td>0,0</td>
         </tr>
 
 
         <tr>
             <th rowspan="2">Humanas</th>
-            <th>História</th>
-            <th>0,0</th>
-            <th>0,0</th>
-            <th>0,0</th>
+            <td>História</td>
+            <td>0,0</td>
+            <td>0,0</td>
+            <td>0,0</td>
         </tr>
         <tr>
-            <th>Geografia</th>
-            <th>0,0</th>
-            <th>0,0</th>
-            <th>0,0</th>
+            <td>Geografia</td>
+            <td>0,0</td>
+            <td>0,0</td>
+            <td>0,0</td>
         </tr>
 
         <tr class="diferente">
